# DeepLearning

./: .gitignore  DL_CIFAR10_Image_Classification_NeuralNine.ipynb  DL_Object_Detection.ipynb  DL_Potato_Disease_Classification.ipynb  LICENSE  README.md  pyproject.toml
api/: main.py
